--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -29,123 +29,139 @@
         android:layout_height="0dp"
         android:layout_weight="1">
 
-        <ImageView
-            android:id="@+id/image_profile"
-            android:layout_width="@dimen/_130sdp"
-            android:layout_height="@dimen/_130sdp"
-            android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true"
-            app:srcCompat="@drawable/profile_pic" />
+        <ScrollView
+            android:id="@+id/scroll"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:fillViewport="true">
 
-        <ImageView
-            android:id="@+id/image_figure2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:srcCompat="@drawable/figure_2"
-            android:layout_below="@+id/text_reviews_profile"
-            android:layout_alignLeft="@+id/text_reviews_profile"
-            android:layout_alignStart="@+id/text_reviews_profile"
-            android:layout_marginLeft="@dimen/_11sdp"
-            android:layout_marginStart="@dimen/_11sdp" />
+            <RelativeLayout
+                android:id="@+id/container"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content">
 
-        <ImageView
-            android:id="@+id/imagefigure1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:srcCompat="@drawable/figure_1"
-            android:layout_below="@+id/text_causes_profile"
-            android:layout_alignLeft="@+id/text_history_profile"
-            android:layout_alignStart="@+id/text_history_profile" />
 
-        <ImageView
-            android:id="@+id/imagefigure3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBottom="@+id/image_profile"
-            android:layout_alignLeft="@+id/image_figure2"
-            android:layout_alignStart="@+id/image_figure2"
-            app:srcCompat="@drawable/figure_3" />
+                <ImageView
+                    android:id="@+id/image_profile"
+                    android:layout_width="@dimen/_130sdp"
+                    android:layout_height="@dimen/_130sdp"
+                    android:layout_centerHorizontal="true"
+                    android:layout_centerVertical="true"
+                    app:srcCompat="@drawable/profile_pic" />
 
-        <ImageView
-            android:id="@+id/imagefigure4"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBottom="@+id/imagefigure3"
-            android:layout_alignLeft="@+id/imagefigure1"
-            android:layout_alignStart="@+id/imagefigure1"
-            app:srcCompat="@drawable/figure4" />
+                <ImageView
+                    android:id="@+id/image_figure2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignEnd="@+id/text_location_profile"
+                    android:layout_alignRight="@+id/text_location_profile"
+                    android:layout_below="@+id/text_reviews_profile"
+                    android:layout_marginEnd="@dimen/_14sdp"
+                    android:layout_marginRight="@dimen/_14sdp"
+                    app:srcCompat="@drawable/figure_2" />
 
-        <TextView
-            android:id="@+id/username_profile"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
-            android:text="Rossy Loard"
-            android:textSize="@dimen/_20ssp" />
+                <ImageView
+                    android:id="@+id/imagefigure1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignLeft="@+id/text_history_profile"
+                    android:layout_alignStart="@+id/text_history_profile"
+                    android:layout_below="@+id/text_causes_profile"
+                    android:layout_marginLeft="@dimen/_11sdp"
+                    android:layout_marginStart="@dimen/_11sdp"
+                    app:srcCompat="@drawable/figure_1" />
 
-        <Button
-            android:id="@+id/btn_heart_likes"
-            android:layout_width="@dimen/_40sdp"
-            android:layout_height="@dimen/_40sdp"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="@dimen/_22sdp"
-            android:layout_marginStart="@dimen/_22sdp"
-            android:layout_toEndOf="@+id/image_profile"
-            android:layout_toRightOf="@+id/image_profile"
-            android:background="@drawable/like_heart" />
+                <ImageView
+                    android:id="@+id/imagefigure3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_above="@+id/text_location_profile"
+                    android:layout_alignLeft="@+id/image_figure2"
+                    android:layout_alignStart="@+id/image_figure2"
+                    app:srcCompat="@drawable/figure_3" />
 
-        <Button
-            android:id="@+id/btn_add_causes"
-            android:layout_width="@dimen/_40sdp"
-            android:layout_height="@dimen/_40sdp"
-            android:layout_alignBaseline="@+id/btn_heart_likes"
-            android:layout_alignBottom="@+id/btn_heart_likes"
-            android:layout_marginEnd="@dimen/_23sdp"
-            android:layout_marginRight="@dimen/_23sdp"
-            android:layout_toLeftOf="@+id/image_profile"
-            android:layout_toStartOf="@+id/image_profile"
-            android:background="@drawable/add_cause" />
+                <ImageView
+                    android:id="@+id/imagefigure4"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignBottom="@+id/image_profile"
+                    android:layout_alignLeft="@+id/imagefigure1"
+                    android:layout_alignStart="@+id/imagefigure1"
+                    app:srcCompat="@drawable/figure4" />
 
-        <TextView
-            android:id="@+id/text_reviews_profile"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_above="@+id/image_profile"
-            android:layout_alignEnd="@+id/btn_heart_likes"
-            android:layout_alignRight="@+id/btn_heart_likes"
-            android:text="192k Reviews"
-            android:textSize="@dimen/_15ssp" />
+                <TextView
+                    android:id="@+id/username_profile"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentBottom="true"
+                    android:layout_centerHorizontal="true"
+                    android:text="Rossy Loard"
+                    android:textSize="@dimen/_20ssp" />
 
-        <TextView
-            android:id="@+id/text_causes_profile"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_above="@+id/image_profile"
-            android:layout_alignLeft="@+id/btn_add_causes"
-            android:layout_alignStart="@+id/btn_add_causes"
-            android:text="268k My causes"
-            android:textSize="@dimen/_15ssp" />
+                <TextView
+                    android:id="@+id/text_reviews_profile"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_above="@+id/image_profile"
+                    android:layout_alignLeft="@+id/image_figure2"
+                    android:layout_alignStart="@+id/image_figure2"
+                    android:text="192k Reviews"
+                    android:textSize="@dimen/_15ssp" />
 
-        <TextView
-            android:id="@+id/text_location_profile"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/image_profile"
-            android:layout_toEndOf="@+id/username_profile"
-            android:layout_toRightOf="@+id/username_profile"
-            android:text="Location"
-            android:textSize="@dimen/_15ssp" />
+                <TextView
+                    android:id="@+id/text_causes_profile"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_above="@+id/image_profile"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true"
+                    android:layout_marginLeft="@dimen/_23sdp"
+                    android:layout_marginStart="@dimen/_23sdp"
+                    android:text="268k My causes"
+                    android:textSize="@dimen/_15ssp" />
 
-        <TextView
-            android:id="@+id/text_history_profile"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/imagefigure4"
-            android:layout_toLeftOf="@+id/image_profile"
-            android:layout_toStartOf="@+id/image_profile"
-            android:text="History"
-            android:textSize="@dimen/_15ssp" />
+                <TextView
+                    android:id="@+id/text_location_profile"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/image_profile"
+                    android:layout_toEndOf="@+id/username_profile"
+                    android:layout_toRightOf="@+id/username_profile"
+                    android:text="Location"
+                    android:textSize="@dimen/_15ssp" />
+
+                <TextView
+                    android:id="@+id/text_history_profile"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/imagefigure4"
+                    android:layout_toLeftOf="@+id/image_profile"
+                    android:layout_toStartOf="@+id/image_profile"
+                    android:text="History"
+                    android:textSize="@dimen/_15ssp" />
+
+                <Button
+                    android:id="@+id/button16"
+                    android:layout_width="@dimen/_50sdp"
+                    android:layout_height="@dimen/_50sdp"
+                    android:layout_alignEnd="@+id/imagefigure4"
+                    android:layout_alignRight="@+id/imagefigure4"
+                    android:layout_centerVertical="true"
+                    android:layout_marginRight="@dimen/_50sdp"
+                    android:background="@drawable/add_cause" />
+
+                <Button
+                    android:id="@+id/button18"
+                    android:layout_width="@dimen/_50sdp"
+                    android:layout_height="@dimen/_50sdp"
+                    android:layout_alignLeft="@+id/image_figure2"
+                    android:layout_alignStart="@+id/image_figure2"
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="@dimen/_50sdp"
+                    android:background="@drawable/like_heart" />
+
+            </RelativeLayout>
+        </ScrollView>
 
     </RelativeLayout>
 
