--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -19,8 +19,8 @@
 
             <ImageView
                 android:id="@+id/imagechangetpassword"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="@dimen/_150sdp"
+                android:layout_height="@dimen/_150sdp"
                 android:layout_gravity="center"
                 android:layout_marginTop="@dimen/_20sdp"
                 android:src="@drawable/logo" />
@@ -54,7 +54,7 @@
                 android:layout_gravity="center_horizontal|top"
                 android:layout_marginBottom="@dimen/_5sdp"
                 android:drawableLeft="@drawable/password"
-                android:drawablePadding="@dimen/_16sdp"
+                android:drawablePadding="@dimen/_15sdp"
                 android:ems="10"
                 android:gravity="left"
                 android:hint="New password"
@@ -68,7 +68,7 @@
                 android:layout_gravity="center_horizontal|top"
                 android:layout_marginBottom="@dimen/_5sdp"
                 android:drawableLeft="@drawable/_eye"
-                android:drawablePadding="@dimen/_16sdp"
+                android:drawablePadding="@dimen/_15sdp"
                 android:ems="10"
                 android:gravity="left"
                 android:hint="Confirm password"
