--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -19,8 +19,8 @@
 
             <ImageView
                 android:id="@+id/imagelogin"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="@dimen/_150sdp"
+                android:layout_height="@dimen/_150sdp"
                 android:layout_gravity="center"
                 android:layout_marginTop="@dimen/_20sdp"
                 android:src="@drawable/logo" />
@@ -34,7 +34,7 @@
                 android:layout_margin="@dimen/_20sdp"
                 android:text="Get involved"
                 android:textColor="#ffffff"
-                android:textSize="@dimen/_40ssp" />
+                android:textSize="@dimen/_30ssp" />
 
         </GridLayout>
 
@@ -53,7 +53,7 @@
                 android:layout_gravity="center_horizontal|top"
                 android:layout_marginBottom="@dimen/_5sdp"
                 android:drawableLeft="@drawable/usernameimage"
-                android:drawablePadding="@dimen/_16sdp"
+                android:drawablePadding="@dimen/_15sdp"
                 android:ems="10"
                 android:gravity="left"
                 android:hint="User name"
@@ -67,7 +67,7 @@
                 android:layout_gravity="center_horizontal|top"
                 android:layout_marginBottom="@dimen/_5sdp"
                 android:drawableLeft="@drawable/password"
-                android:drawablePadding="@dimen/_16sdp"
+                android:drawablePadding="@dimen/_15sdp"
                 android:ems="10"
                 android:gravity="left"
                 android:hint="Password"
@@ -86,10 +86,11 @@
                 android:id="@+id/text_forget"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:gravity="right"
                 android:text="Forget Passowrd"
-                android:textColor="@color/colorAccent"
-                android:textSize="@dimen/_16ssp" />
+                android:textColor="#ff0000"
+                android:textSize="@dimen/_16ssp"/>
+                <!--android:visibility="invisible" -->
+
         </LinearLayout>
 
         <LinearLayout
@@ -100,8 +101,8 @@
 
             <ImageButton
                 android:id="@+id/btn_login"
-                android:layout_width="@dimen/_80sdp"
-                android:layout_height="@dimen/_80sdp"
+                android:layout_width="@dimen/_100sdp"
+                android:layout_height="@dimen/_100sdp"
                 android:layout_marginBottom="@dimen/_10sdp"
                 android:layout_marginTop="@dimen/_10sdp"
                 android:background="@drawable/oragnecircal"
