--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -19,8 +19,8 @@
 
             <ImageView
                 android:id="@+id/imageresetpassword"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="@dimen/_150sdp"
+                android:layout_height="@dimen/_150sdp"
                 android:layout_gravity="center"
                 android:layout_marginTop="@dimen/_20sdp"
                 android:src="@drawable/logo" />
@@ -64,7 +64,7 @@
                 android:layout_gravity="center_horizontal|top"
                 android:layout_marginBottom="@dimen/_5sdp"
                 android:drawableLeft="@drawable/message"
-                android:drawablePadding="@dimen/_16sdp"
+                android:drawablePadding="@dimen/_15sdp"
                 android:ems="10"
                 android:gravity="left"
                 android:hint="Enter your email"
