--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -80,16 +80,17 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="right"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:padding="@dimen/_8sdp">
 
             <TextView
                 android:id="@+id/text_forget"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Forget Passowrd"
-                android:textColor="#ff0000"
-                android:textSize="@dimen/_16ssp"/>
-                <!--android:visibility="invisible" -->
+                android:textColor="@color/colorAccent"
+                android:textSize="@dimen/_16ssp" />
+            <!--android:visibility="invisible" -->
 
         </LinearLayout>
 
