--- a/app/src/main/res/layout/item_in_home.xml
+++ b/app/src/main/res/layout/item_in_home.xml
@@ -1,54 +1,29 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+<?xml version="1.0" encoding="utf-8"?>
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <android.support.v7.widget.CardView
-        android:id="@+id/card_view"
+    <ImageView
+        android:id="@+id/image_in_item_home"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_gravity="center"
-        android:elevation="@dimen/_3sdp"
-        card_view:cardCornerRadius="0dp">
+        android:layout_height="@dimen/_160sdp"
+        android:padding="5dp"
+        android:clickable="true"
+        android:scaleType="fitXY"
+        app:srcCompat="@drawable/logo" />
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+    <TextView
+        android:id="@+id/text_item_in_home"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/image_in_item_home"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:background="#BB000000"
+        android:padding="@dimen/_5sdp"
+        android:text="hhhhhhhhhhhhhhhhhhhhhhhhhhhhhh"
+        android:textColor="#ffffff"
+        android:textSize="@dimen/_12ssp" />
 
-            <ImageView
-                android:id="@+id/image_in_item_home"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/_160sdp"
-                android:background="?attr/selectableItemBackgroundBorderless"
-                android:clickable="true"
-                android:scaleType="fitXY"
-                android:src="@drawable/logo" />
-
-            <TextView
-                android:id="@+id/text_item_in_home"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/image_in_item_home"
-                android:layout_marginRight="@dimen/_100sdp"
-                android:background="#000000"
-                android:padding="@dimen/_5sdp"
-                android:text="hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh"
-                android:textColor="#ffffff"
-                android:textSize="@dimen/_12ssp" />
-
-            <ImageButton
-                android:id="@+id/overflow"
-                android:layout_width="@dimen/_30sdp"
-                android:layout_height="@dimen/_30sdp"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentRight="true"
-                android:layout_centerVertical="true"
-                android:background="@drawable/orange_triangle"
-                android:padding="@dimen/_10sdp"
-                android:scaleType="centerCrop"
-                android:src="@drawable/download_right" />
-
-        </RelativeLayout>
-
-    </android.support.v7.widget.CardView>
-</LinearLayout>
+</RelativeLayout>
